--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Computer-graphics : course page">
+    <meta name="description" content="Computer-graphics (DLUT) : School of Mathematical Science">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Computer-graphics</title>
+    <title>Computer-graphics (DLUT)</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/xindongzhang/computer-graphics">View on GitHub</a>
 
-          <h1 id="project_title">Computer-graphics</h1>
-          <h2 id="project_tagline">course page</h2>
+          <h1 id="project_title">Computer-graphics (DLUT)</h1>
+          <h2 id="project_tagline">School of Mathematical Science</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/xindongzhang/computer-graphics/zipball/master">Download this project as a .zip file</a>
@@ -31,44 +31,103 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h2>
+<a id="计算机图形学" class="anchor" href="#%E8%AE%A1%E7%AE%97%E6%9C%BA%E5%9B%BE%E5%BD%A2%E5%AD%A6" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>计算机图形学</strong>
+</h2>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<hr>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<h3>
+<a id="简介" class="anchor" href="#%E7%AE%80%E4%BB%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>简介</strong>
+</h3>
+
+<p>该课程由大连理工大学数学科学学院计算数学系开设，任课教师为苏志勋教授(<a href="http://cggi.dlut.edu.cn/?page_id=221">个人主页</a>)，助教为张新栋。该课程为64学时的课程（不包含上机实习时间），整个课程内容涵盖图象处理、计算机视觉、计算机图形学。应用为主,理论为辅，提倡大家多动手实验，积极解决实际问题。</p>
+
+<hr>
+
+<h3>
+<a id="课程要求" class="anchor" href="#%E8%AF%BE%E7%A8%8B%E8%A6%81%E6%B1%82" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>课程要求</strong>
+</h3>
+
+<p>要完成这门课程的学习，你可能需要掌握如下技能：</p>
+
+<blockquote>
+<pre><code>* 一定matlab基础
+* 一定的C++/C基础
+* OpenCV and OpenGL
+* Python等脚本语言(非必须)
+* 积极探索问题的勇气
 </code></pre>
+</blockquote>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<hr>
 
 <h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<a id="推荐的书籍" class="anchor" href="#%E6%8E%A8%E8%8D%90%E7%9A%84%E4%B9%A6%E7%B1%8D" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>推荐的书籍</strong>
+</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>该课程没有统一推荐的书籍，主要以老师的上课课件为主，后续的材料我们会统一上传到课程的主页，还望大家能持续关注。关于图像处理、计算机视觉、计算几何的推荐材料，基本如下：</p>
+
+<blockquote>
+<ul>
+<li>数字图像处理（冈萨雷斯）</li>
+<li>Computer Vision Algorithm and Application: </li>
+<li>OpenGL 编程指南: </li>
+<li>Matlab学习资源: <a href="http://cn.mathworks.com/help/index.html">Link</a>
+</li>
+<li>C++/C: <a href="http://www.tutorialspoint.com/cplusplus/index.htm">Link</a>
+</li>
+</ul>
+</blockquote>
+
+<hr>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="课程ppt" class="anchor" href="#%E8%AF%BE%E7%A8%8Bppt" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>课程PPT</strong>
+</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<blockquote>
+<ul>
+<li>TAG</li>
+<li>TAG</li>
+<li>...</li>
+</ul>
+</blockquote>
+
+<hr>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="课程作业" class="anchor" href="#%E8%AF%BE%E7%A8%8B%E4%BD%9C%E4%B8%9A" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>课程作业</strong>
+</h3>
 
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<blockquote>
+<ul>
+<li>TAG</li>
+<li>TAG</li>
+<li>...</li>
+</ul>
+</blockquote>
+
+<hr>
+
+<h3>
+<a id="其他资源" class="anchor" href="#%E5%85%B6%E4%BB%96%E8%B5%84%E6%BA%90" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>其他资源</strong>
+</h3>
+
+<blockquote>
+<ul>
+<li>TAG</li>
+<li>TAG</li>
+<li>...</li>
+</ul>
+</blockquote>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Computer-graphics maintained by <a href="https://github.com/xindongzhang">xindongzhang</a></p>
+        <p class="copyright">Computer-graphics (DLUT) maintained by <a href="https://github.com/xindongzhang">xindongzhang</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
