Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Computer-graphics (DLUT) : School of Mathematical Science">
+    <meta name="description" content="Computer Graphics (DLUT) : School of Mathematical Science">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Computer-graphics (DLUT)</title>
+    <title>Computer Graphics (DLUT)</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/xindongzhang/computer-graphics">View on GitHub</a>
 
-          <h1 id="project_title">Computer-graphics (DLUT)</h1>
+          <h1 id="project_title">Computer Graphics (DLUT)</h1>
           <h2 id="project_tagline">School of Mathematical Science</h2>
 
             <section id="downloads">
@@ -41,7 +41,7 @@
 <a id="简介" class="anchor" href="#%E7%AE%80%E4%BB%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>简介</strong>
 </h3>
 
-<p>该课程由大连理工大学数学科学学院计算数学系开设，任课教师为苏志勋教授(<a href="http://cggi.dlut.edu.cn/?page_id=221">个人主页</a>)，助教为张新栋。该课程为64学时的课程（不包含上机实习时间），整个课程内容涵盖图象处理、计算机视觉、计算机图形学。应用为主,理论为辅，提倡大家多动手实验，积极解决实际问题。</p>
+<p>该课程由大连理工大学数学科学学院计算数学系开设，任课教师为苏志勋教授(<a href="http://cggi.dlut.edu.cn/?page_id=221">个人主页</a>)，助教为张新栋。该课程为64学时的课程（不包含上机实习时间），整个课程内容涵盖图象处理、计算机视觉、计算机图形学。应用为主,理论为辅，提倡大家多动手实验，积极解决实际问题。通过这门课程的学习，你将会学习到图像处理、计算机视觉、计算机图形学的基本知识，学习和掌握一定的编程技能。</p>
 
 <hr>
 
@@ -52,11 +52,10 @@
 <p>要完成这门课程的学习，你可能需要掌握如下技能：</p>
 
 <blockquote>
-<pre><code>* 一定matlab基础
+<pre><code>* 一定MatLab基础
 * 一定的C++/C基础
 * OpenCV and OpenGL
 * Python等脚本语言(非必须)
-* 积极探索问题的勇气
 </code></pre>
 </blockquote>
 
@@ -71,9 +70,11 @@
 <blockquote>
 <ul>
 <li>数字图像处理（冈萨雷斯）</li>
-<li>Computer Vision Algorithm and Application: </li>
-<li>OpenGL 编程指南: </li>
-<li>Matlab学习资源: <a href="http://cn.mathworks.com/help/index.html">Link</a>
+<li>Computer Vision Algorithm and Application: <a href="http://pan.baidu.com/s/14g0V0">Link</a>
+</li>
+<li>OpenGL 编程指南: <a href="http://pan.baidu.com/s/1gd4Cj0B">Link</a>
+</li>
+<li>MatLab学习资源: <a href="http://cn.mathworks.com/help/index.html">Link</a>
 </li>
 <li>C++/C: <a href="http://www.tutorialspoint.com/cplusplus/index.htm">Link</a>
 </li>
@@ -116,9 +117,12 @@
 
 <blockquote>
 <ul>
-<li>TAG</li>
-<li>TAG</li>
-<li>...</li>
+<li>MatLab图像处理工具箱文档: <a href="http://cn.mathworks.com/help/images/index.html">Link</a>
+</li>
+<li>OpenCV下载地址: <a href="http://opencv.org/">Link</a>
+</li>
+<li>OpenGL下载地址: <a href="http://www.opengl.org/">Link</a>
+</li>
 </ul>
 </blockquote>
       </section>
@@ -127,7 +131,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Computer-graphics (DLUT) maintained by <a href="https://github.com/xindongzhang">xindongzhang</a></p>
+        <p class="copyright">Computer Graphics (DLUT) maintained by <a href="https://github.com/xindongzhang">xindongzhang</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
