Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
 
 <blockquote>
 <ul>
+<li>学习讨论论坛: <a href="http://cggi.suv.hk">Link</a>
+</li>
 <li>MatLab图像处理工具箱文档: <a href="http://cn.mathworks.com/help/images/index.html">Link</a>
 </li>
 <li>OpenCV下载地址: <a href="http://opencv.org/">Link</a>
