Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 <blockquote>
 <ul>
-<li>学习讨论论坛: <a href="http://103.233.185.196">Link</a>
+<li>学习讨论论坛: <a href="103.233.185.196">Link</a>
 </li>
 <li>MatLab图像处理工具箱文档: <a href="http://cn.mathworks.com/help/images/index.html">Link</a>
 </li>
