Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <a id="简介" class="anchor" href="#%E7%AE%80%E4%BB%8B" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>简介</strong>
 </h3>
 
-<p>该课程由大连理工大学数学科学学院计算数学系开设，任课教师为苏志勋教授(<a href="http://cggi.dlut.edu.cn/?page_id=221">个人主页</a>)，助教为张新栋。该课程为64学时的课程（不包含上机实习时间），整个课程内容涵盖图象处理、计算机视觉、计算机图形学。应用为主,理论为辅，提倡大家多动手实验，积极解决实际问题。通过这门课程的学习，你将会学习到图像处理、计算机视觉、计算机图形学的基本知识，学习和掌握一定的编程技能。</p>
+<p>该课程由大连理工大学数学科学学院计算数学系开设，任课教师为苏志勋教授(<a href="http://cggi.dlut.edu.cn/?page_id=221">个人主页</a>)，助教为张新栋(<a href="http://xindongzhang.github.io/about">联系我</a>)。该课程为64学时的课程（不包含上机实习时间），整个课程内容涵盖图象处理、计算机视觉、计算机图形学。应用为主,理论为辅，提倡大家多动手实验，积极解决实际问题。通过这门课程的学习，你将会学习到图像处理、计算机视觉、计算机图形学的基本知识，学习和掌握一定的编程技能。</p>
 
 <hr>
 
