Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <pre><code>* 一定MatLab基础
 * 一定的C++/C基础
 * OpenCV and OpenGL
-* Python等脚本语言(非必须)
+* Python等脚本语言(非必须,但是推荐学习，对就业帮助很大，numpy+Opencv+PyOpenGL+PyCUDA+Pymatplotlib+django，可以wiki了解)
 </code></pre>
 </blockquote>
 
@@ -122,6 +122,8 @@
 <li>OpenCV下载地址: <a href="http://opencv.org/">Link</a>
 </li>
 <li>OpenGL下载地址: <a href="http://www.opengl.org/">Link</a>
+</li>
+<li>Python资料下载: <a href="https://pypi.python.org/pypi">Link</a>
 </li>
 </ul>
 </blockquote>
