Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
 </li>
 <li>C++/C: <a href="http://www.tutorialspoint.com/cplusplus/index.htm">Link</a>
 </li>
+<li>Python: <a href="http://www.w3cschool.cc/">Link</a>
+</li>
 </ul>
 </blockquote>
 
@@ -123,7 +125,7 @@
 </li>
 <li>OpenGL下载地址: <a href="http://www.opengl.org/">Link</a>
 </li>
-<li>Python资料下载: <a href="https://pypi.python.org/pypi">Link</a>
+<li>Python资源下载: <a href="https://pypi.python.org/pypi">Link</a>
 </li>
 </ul>
 </blockquote>
