--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </li>
 <li>C++/C: <a href="http://www.tutorialspoint.com/cplusplus/index.htm">Link</a>
 </li>
-<li>Python: <a href="http://www.w3cschool.cc/">Link</a>
+<li>Python: <a href="http://www.w3cschool.cc/python/python-tutorial.html">Link</a>
 </li>
 </ul>
 </blockquote>
