Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/xindongzhang/computer-graphics">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/xindongzhang/CG">View on GitHub</a>
 
           <h1 id="project_title">Computer Graphics (DLUT)</h1>
           <h2 id="project_tagline">School of Mathematical Science</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/xindongzhang/computer-graphics/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/xindongzhang/computer-graphics/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/xindongzhang/CG/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/xindongzhang/CG/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -128,6 +128,8 @@
 <li>Python资源下载: <a href="https://pypi.python.org/pypi">Link</a>
 </li>
 </ul>
+
+<p><img src="https://github.com/xindongzhang/xindongzhang.github.io/blob/master/_posts/BlogSrc/DeliciousFood/ThaiFood/taiguo1.jpg" alt="123"></p>
 </blockquote>
       </section>
     </div>
