Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,8 +32,37 @@
 <hr>
 
 <h3>
-<a id="课程要求" class="anchor" href="#%E8%AF%BE%E7%A8%8B%E8%A6%81%E6%B1%82" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>课程要求</strong>
+<a id="上课时间" class="anchor" href="#%E4%B8%8A%E8%AF%BE%E6%97%B6%E9%97%B4" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>上课时间</strong>
 </h3>
+
+<table>
+<thead>
+<tr>
+<th>上课时间</th>
+<th>上课地点</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>周三 1-2节课  (9-16周)</td>
+<td>二馆 2-107</td>
+</tr>
+<tr>
+<td>周五 5-6节课  (9-16周)</td>
+<td>二馆 2-107</td>
+</tr>
+<tr>
+<td>上机课时间    (待定)</td>
+<td>待定</td>
+</tr>
+</tbody>
+</table>
+
+<hr>
+
+<h2>
+<a id="课程要求" class="anchor" href="#%E8%AF%BE%E7%A8%8B%E8%A6%81%E6%B1%82" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>课程要求</strong>
+</h2>
 
 <p>要完成这门课程的学习，你可能需要掌握如下技能：</p>
 
@@ -47,9 +76,9 @@
 
 <hr>
 
-<h3>
+<h2>
 <a id="推荐的书籍" class="anchor" href="#%E6%8E%A8%E8%8D%90%E7%9A%84%E4%B9%A6%E7%B1%8D" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>推荐的书籍</strong>
-</h3>
+</h2>
 
 <p>该课程没有统一推荐的书籍，主要以老师的上课课件为主，后续的材料我们会统一上传到课程的主页，还望大家能持续关注。关于图像处理、计算机视觉、计算几何的推荐材料，基本如下：</p>
 
@@ -71,9 +100,9 @@
 
 <hr>
 
-<h3>
+<h2>
 <a id="课程ppt" class="anchor" href="#%E8%AF%BE%E7%A8%8Bppt" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>课程PPT</strong>
-</h3>
+</h2>
 
 <blockquote>
 <ul>
@@ -85,9 +114,11 @@
 
 <hr>
 
-<h3>
+<h2>
 <a id="课程作业" class="anchor" href="#%E8%AF%BE%E7%A8%8B%E4%BD%9C%E4%B8%9A" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>课程作业</strong>
-</h3>
+</h2>
+
+<p>姓名+学号+第几次作业:张新栋21401030第一次，压缩并邮件到<a href="mailto:xindongzhang@outlook.com">xindongzhang@outlook.com</a></p>
 
 <blockquote>
 <ul>
@@ -98,14 +129,12 @@
 
 <hr>
 
-<h3>
+<h2>
 <a id="其他资源" class="anchor" href="#%E5%85%B6%E4%BB%96%E8%B5%84%E6%BA%90" aria-hidden="true"><span class="octicon octicon-link"></span></a><strong>其他资源</strong>
-</h3>
+</h2>
 
 <blockquote>
 <ul>
-<li>学习讨论论坛: <a href="http://103.233.185.196">Link</a>
-</li>
 <li>MatLab图像处理工具箱文档: <a href="http://cn.mathworks.com/help/images/index.html">Link</a>
 </li>
 <li>OpenCV下载地址: <a href="http://opencv.org/">Link</a>
