--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1 class="project-name">Computer Graphics (DLUT)</h1>
       <h2 class="project-tagline">School of Mathematical Science</h2>
       <a href="https://github.com/xindongzhang/CG" class="btn">View on GitHub</a>
-      <a href="https://github.com/xindongzhang/CG/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/xindongzhang/CG/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="/" class="btn">Download .zip</a>
+      <a href="/" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
