Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1 class="project-name">Computer Graphics (DLUT)</h1>
       <h2 class="project-tagline">School of Mathematical Science</h2>
       <a href="https://github.com/xindongzhang/CG" class="btn">View on GitHub</a>
-      <a href="#" class="btn">Download .zip</a>
-      <a href="#" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/xindongzhang/CG/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/xindongzhang/CG/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
@@ -44,12 +44,12 @@
 </thead>
 <tbody>
 <tr>
-<td>周三 1-2节课  (9-16周)</td>
-<td>二馆 2-107</td>
+<td>周二 7-8节课  (9-16周)</td>
+<td>综合楼 1-110</td>
 </tr>
 <tr>
-<td>周五 5-6节课  (9-16周)</td>
-<td>二馆 2-107</td>
+<td>周五 3-4节课  (9-16周)</td>
+<td>综合楼 1-110</td>
 </tr>
 <tr>
 <td>上机课时间    (待定)</td>
@@ -106,8 +106,9 @@
 
 <blockquote>
 <ul>
-<li>TAG</li>
-<li>TAG</li>
+<li><a href="https://github.com/xindongzhang/CG/blob/gh-pages/_powerpoints/lect1(Raster).ppt?raw=true">lect1-Raster</a></li>
+<li><a href="https://github.com/xindongzhang/CG/blob/gh-pages/_powerpoints/lect2(Dither&amp;Alias).ppt?raw=true">lect2-Dither</a></li>
+<li><a href="https://github.com/xindongzhang/CG/blob/gh-pages/_powerpoints/lect3(Line,%20Modelling,%20Structure).ppt?raw=true">lect3-Line</a></li>
 <li>...</li>
 </ul>
 </blockquote>
