Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 <td>综合楼 1-110</td>
 </tr>
 <tr>
-<td>上机课时间    (待定)</td>
-<td>待定</td>
+<td>上机    周一晚9-12</td>
+<td>C座   c-0119</td>
 </tr>
 </tbody>
 </table>
