Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -109,7 +109,19 @@
 <li><a href="https://github.com/xindongzhang/CG/blob/gh-pages/_powerpoints/lect1(Raster).ppt?raw=true">lect1-Raster</a></li>
 <li><a href="https://github.com/xindongzhang/CG/blob/gh-pages/_powerpoints/lect2(Dither&amp;Alias).ppt?raw=true">lect2-Dither</a></li>
 <li><a href="https://github.com/xindongzhang/CG/blob/gh-pages/_powerpoints/lect3(Line,%20Modelling,%20Structure).ppt?raw=true">lect3-Line</a></li>
-<li>...</li>
+<li><a href="https://github.com/xindongzhang/CG/raw/gh-pages/_powerpoints/lect4(Transform).ppt">lect4-transform</a></li>
+<li><a href="https://github.com/xindongzhang/CG/raw/gh-pages/_powerpoints/lect5(Local%20Illumination).ppt">lect5-local-illumination</a></li>
+<li><a href="https://github.com/xindongzhang/CG/raw/gh-pages/_powerpoints/lect6(Global%20Illumination).ppt">lect6-global-illumination</a></li>
+<li><a href="https://github.com/xindongzhang/CG/raw/gh-pages/_powerpoints/lect7(graphics-animation-keyframe).ppt">lect7-graphics-animation</a></li>
+<li><a href="https://github.com/xindongzhang/CG/raw/gh-pages/_powerpoints/lect8(graphics-animation-IK).ppt">lect8-graphics-animation-IK</a></li>
+<li><a href="https://github.com/xindongzhang/CG/raw/gh-pages/_powerpoints/lect9(graphics-animation-deformation).ppt">lect9-deformation</a></li>
+<li><a href="https://github.com/xindongzhang/CG/raw/gh-pages/_powerpoints/lect10(graphics-animation-morphing).ppt">lect10-morphing</a></li>
+<li><a href="https://github.com/xindongzhang/CG/raw/gh-pages/_powerpoints/lect11(graphics-animation-ODE).ppt">lect11-animation-ODE</a></li>
+<li><a href="https://github.com/xindongzhang/CG/raw/gh-pages/_powerpoints/lect12(graphics-animation-particle).ppt">lect12-animation-particle</a></li>
+<li><a href="https://github.com/xindongzhang/CG/raw/gh-pages/_powerpoints/lect13(Image-filter).ppt">lect13-image-filter</a></li>
+<li><a href="https://github.com/xindongzhang/CG/raw/gh-pages/_powerpoints/lect14(Image-edge).ppt">lect14-image-edge</a></li>
+<li><a href="https://github.com/xindongzhang/CG/raw/gh-pages/_powerpoints/lect15(Image-Haar%20Transform).ppt">lect15-haar-transform</a></li>
+<li><a href="https://github.com/xindongzhang/CG/raw/gh-pages/_powerpoints/lect16(Image-Fourier%20Transform).ppt">lect16-fourier-transform</a></li>
 </ul>
 </blockquote>
 
