Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -159,6 +159,30 @@
 </ul>
 </blockquote>
 
+<hr>
+
+<h2>
+<a id="作业上交情况" class="anchor" href="#%E4%BD%9C%E4%B8%9A%E4%B8%8A%E4%BA%A4%E6%83%85%E5%86%B5" aria-hidden="true"><span class="octicon octicon-link"></span></a>作业上交情况</h2>
+
+<table>
+<thead>
+<tr>
+<th>姓名(学号)</th>
+<th>第一次</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>刘阳-201212012</td>
+<td>已交</td>
+</tr>
+<tr>
+<td>刘新钰-201298702</td>
+<td>已交</td>
+</tr>
+</tbody>
+</table>
+
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/xindongzhang/CG">Computer Graphics (DLUT)</a> is maintained by <a href="https://github.com/xindongzhang">xindongzhang</a>.</span>
 
