--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 <li>
 <a href="https://github.com/xindongzhang/CG/blob/gh-pages/_homeworks/homework1.md">第一次上机作业</a>，<a href="https://github.com/xindongzhang/CG/raw/gh-pages/_homeworks/ImageLAB.zip">参考示例</a>
 </li>
+<li><a href="https://github.com/xindongzhang/CG/blob/gh-pages/_homeworks/homework2.md">第二次上机作业</a></li>
 <li>...</li>
 </ul>
 </blockquote>
