Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 <a href="https://github.com/xindongzhang/CG/blob/gh-pages/_homeworks/homework1.md">第一次上机作业</a>，<a href="https://github.com/xindongzhang/CG/raw/gh-pages/_homeworks/ImageLAB.zip">参考示例</a>
 </li>
 <li><a href="https://github.com/xindongzhang/CG/blob/gh-pages/_homeworks/homework2.md">第二次上机作业</a></li>
+<li><a href="https://github.com/xindongzhang/CG/blob/gh-pages/_homeworks/homework3.md">第三次上级作业</a></li>
 <li>...</li>
 </ul>
 </blockquote>
