Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -274,87 +274,92 @@
 <tr>
 <td>刘阳-201212012</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>刘新钰-201298702</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>林佳莹-201211012</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>夏玉-201211050</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>崔丁仁-201212021</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>吴晓君-201298703</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>林静颐-201298701</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>刘泽旭-201211080</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>汪恺-201211001</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>杜炜伟-201211119</td>
 <td><strong>请假</strong></td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>黄一珉-201211003</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>刘万正-201211079</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>迟哲爽-201211039‏</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>王仁振-201211014</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>项敏-201211136</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
-<td>刘畅</td>
+<td>刘旸</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
 </tr>
 <tr>
 <td>李树阳</td>
 <td>未缺</td>
-<td></td>
+<td>未缺</td>
+</tr>
+<tr>
+<td>王小初</td>
+<td><strong>缺勤</strong></td>
+<td>未缺</td>
 </tr>
 </tbody>
 </table>
